force-app/main/default/objects/Mirrexa_Settings__c/Mirrexa_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the Mirrexa application</description>
    <label>Mirrexa Settings</label>
</CustomObject>