force-app/main/default/objects/Mirrexa_Settings__c/fields/Last_Operation_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Operation_Id__c</fullName>
    <description>Unique identifier for the last setup operation for tracking and debugging</description>
    <inlineHelpText>Unique ID that can be used to correlate debug logs with setup operations</inlineHelpText>
    <label>Last Operation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>