force-app/main/default/objects/Mirrexa_Settings__c/fields/Last_Setup_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Setup_Error__c</fullName>
    <description>Stores the last setup error message and type for troubleshooting</description>
    <inlineHelpText>Contains the last error encountered during Mirrexa setup operations</inlineHelpText>
    <label>Last Setup Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>