force-app/main/default/objects/Mirrexa_Settings__c/fields/Last_Setup_Error_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Setup_Error_Time__c</fullName>
    <description>Timestamp of the last setup error for troubleshooting</description>
    <inlineHelpText>Date and time when the last setup error occurred</inlineHelpText>
    <label>Last Setup Error Time</label>
    <type>DateTime</type>
</CustomField>