force-app/main/default/objects/Mirrexa_Settings__c/fields/Last_Setup_Success__c.field-meta.xml
<CustomField>
    <fullName>Last_Setup_Success__c</fullName>
    <description>Stores the last successful setup operation message</description>
    <inlineHelpText>Contains details of the last successful Mirrexa setup operation</inlineHelpText>
    <label>Last Setup Success</label>
    <length>255</length>
    <type>Text</type>
</CustomField>