force-app/main/default/objects/Mirrexa_Settings__c/fields/Last_Setup_Success_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Setup_Success_Time__c</fullName>
    <description>Timestamp of the last successful setup operation</description>
    <inlineHelpText>Date and time when the last successful setup operation completed</inlineHelpText>
    <label>Last Setup Success Time</label>
    <type>DateTime</type>
</CustomField>