force-app/main/default/objects/Mirrexa_Settings__c/fields/SetupComplete__c.field-meta.xml
<CustomField>
    <fullName>SetupComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Mirrexa setup has been completed</description>
    <inlineHelpText>Indicates whether the Mirrexa setup has been completed</inlineHelpText>
    <label>Setup Complete</label>
    <type>Checkbox</type>
</CustomField>